# uniqlo-sales-alerter

./: CHANGELOG.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  update.sh
.cursor/: hooks.json
.cursor/hooks/: lint-and-test.py
.cursor/rules/: project-conventions.mdc  python-standards.mdc  testing.mdc
.github/workflows/: docker-publish.yml  main.yml  sync-fork.yml
src/uniqlo_sales_alerter/: __init__.py  __main__.py  config.py  main.py  settings_ui.py
src/uniqlo_sales_alerter/api/: routes.py
src/uniqlo_sales_alerter/clients/: uniqlo.py
src/uniqlo_sales_alerter/models/: products.py
src/uniqlo_sales_alerter/notifications/: base.py  console.py  dispatcher.py  email.py  html_report.py  telegram.py
src/uniqlo_sales_alerter/services/: sale_checker.py
tests/: conftest.py  test_api.py  test_config.py  test_e2e_html_preview.py  test_notifications.py  test_sale_checker.py  test_uniqlo_client.py
